# CMS

./: README.md
Code/docs/: uml.txt
Code/frontend/: api.py  app.py  config.py  requirements.txt
Code/frontend/components/: requests.py  sidebar.py
Code/frontend/dashboards/: admin.py  agency.py  peopleincrisis.py  relief_provider.py  volunteer.py
Code/src/: CMakeLists.txt  main.cpp  run.sh
Code/src/api/: ApiServer.h
Code/src/commands/: HelpRequestCommand.h
Code/src/controllers/: AdminController.h  AlertSystemController.h  GovernmentAgencyController.h  HelpRequestController.h  PeopleInCrisisController.h  ReliefProviderController.h  VolunteerController.h
Code/src/database/: DatabaseManager.h
Code/src/database/migrations/: 002_add_emergency_and_security_tables.sql
Code/src/decorators/: UserDecorator.h
Code/src/models/: Admin.h  AlertSystem.h  GovernmentAgency.h  HelpRequest.h  PeopleInCrisis.h  ReliefProvider.h  Volunteer.h
